# FocusMode

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  db.rs  lib.rs  main.rs  session.rs  state.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src/components/home/: HomeView.tsx
src/components/layout/: Navigation.tsx
src/components/sanctuary/: BlockedOverlay.tsx  BreathingOverlay.tsx  SanctuaryView.tsx
src/components/settings/: SettingsView.tsx
src/components/setup/: SetupView.tsx
src/components/stats/: StatsView.tsx
src/components/ui/: Button.tsx
src/lib/: tauri.ts  utils.ts
src/stores/: appStore.ts
src/types/: index.ts
